# Physical-AI-Humanoid-Robotics-Book

./: .gitignore  .npmignore  404.html  CLAUDE.md  Dockerfile  README.md  blog.html  book-content.md  faq.html  index.html  markdown-page.html  nixpacks.toml  prerequisites.html  profile.html  projects.html  railway.toml  requirements.html  reset-password.html  signin.html  signout.html  signup.html  sitemap.xml  start.sh
.claude/agents/: docusaurus-frontend-dev.md
.github/workflows/: ci.yml
assets/js/: 1351.93d3537c.js  (+96 more)
auth/: callback.html
backend/: .env.example  README.md  pyproject.toml  railway.toml  requirements.txt  test_agent.py  test_api_error_handling.py  test_error_handling.py  test_pinecone_direct.py  test_pinecone_query.py  upload_to_pinecone.py
backend/app/: main.py
backend/app/api/v1/: chat.py
backend/app/core/: config.py  security.py
backend/app/models/: chat.py  session.py
backend/app/services/: agent_service.py  chat_service.py  session_service.py
backend/app/utils/: validators.py
backend/history/prompts/general/: 0002-git-workflow-commit-and-pr.general.prompt.md
backend/src/backend/: __init__.py
blog/: archive.html  atom.xml  authors.html  first-blog-post.html  long-blog-post.html  mdx-blog-post.html  rss.xml  tags.html  welcome.html
docs/: authentication-enhancements.html  authentication-setup.html  intro.html  module1.html  module2.html  module3.html  module4.html
physical-ai-book/: .npmignore  README.md  docusaurus.config.ts  jest.config.js  jest.config.temp.js  package-lock.json  package.json  sidebars.ts  tsconfig.json
(+255 files in other folders)
