[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammad-Azan-1", email = "azan96593@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.124.4",
    "google-genai>=1.56.0",
    "openai-agents>=0.6.3",
    "pinecone>=8.0.0",
]

[project.scripts]
backend = "backend.__init__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
